# kardia-core

./: Cargo.toml
dualchain/: Cargo.toml
dualnode/: Cargo.toml
kvm/: Cargo.toml
mainchain/: Cargo.toml
